correção de ortografia

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img src="./assets/bethehero.png"/>
                         <h1>Be the Hero</h1>
                         <p>
-                            aplicação feita durante a semana Omnistack, que possui como objetivo ajudar finançeiramente 
+                            aplicação feita durante a semana Omnistack, que possui como objetivo ajudar financeiramente 
                             Ongs das mais variadas atividades assim como cadastrar suas proprias Ongs.
                         </p>
                         <br>
