descrição do be the hero

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                         <h1>Be the Hero</h1>
                         <p>
                             aplicação feita durante a semana Omnistack, que possui como objetivo ajudar financeiramente 
-                            Ongs das mais variadas atividades assim como cadastrar suas proprias Ongs.
+                            Ongs das mais variadas areas. Nela pode-se tanto ajudar quanto cadastrar sua ong para receber 
+                            auxilio dos interessados.
                         </p>
                         <br>
                         <a href="https://github.com/jacksonPrimo/be-the-hero-OmniStack" target="blank">link do repositório</a>
