--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <div>
                         <img src="./assets/arefeicao.png"/>
                         <h1>Arefeição</h1>
-                        <p>aplicação baseada em uma de mesmo nome para rezerva de vagas no refeitorio do IFPI.</p><br>
-                        <a href="https://github.com/jacksonPrimo/projeto-refeitorio" target="blank">link do repositório</a>
+                        <p>aplicação baseada em uma de mesmo nome para reserva de vagas no refeitorio do IFPI.</p><br>
+                        <a href="https://github.com/jacksonPrimo/projeto-refeitorio" target="blank">link do repositório <i class="fa fa-arrow-right"></i></a>
                     </div>
                     <div>
                         <img src="./assets/bethehero.png"/>
@@ -106,7 +106,7 @@
                             auxilio dos interessados.
                         </p>
                         <br>
-                        <a href="https://github.com/jacksonPrimo/be-the-hero-OmniStack" target="blank">link do repositório</a>
+                        <a href="https://github.com/jacksonPrimo/be-the-hero-OmniStack" target="blank">link do repositório <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
             </section>
