--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>portifólio</title>
         <link rel="stylesheet" href="./style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet"> 
@@ -26,7 +27,7 @@
         </nav>
         <main>
             <section class="sobre">
-                <a name="sobre" id="sobre"><h1><i class="fa fa-coffee"></i> Sobre</h1></a>
+                <a class="a_nav" name="sobre" id="sobre"><h1><i class="fa fa-coffee"></i> Sobre</h1></a>
                 <div class="div-section">
                     <div class="imagem">
                         <img src="./assets/perfil.jpg"/>
@@ -47,7 +48,7 @@
                 </div>
             </section>
             <section class="skills">
-                <a name="skills" id="skills"><h1><i class="fa fa-coffee"></i> Skills</h1></a>
+                <a class="a_nav" name="skills" id="skills"><h1><i class="fa fa-coffee"></i> Skills</h1></a>
                 <div class="div-section">
                     <ul>
                         <li>
@@ -89,7 +90,7 @@
                 </div>
             </section>
             <section class="laboratorio">
-                <a name="laboratorio" id="laboratorio"><h1><i class="fa fa-coffee"></i> Laboratório</h1></a>
+                <a class="a_nav" name="laboratorio" id="laboratorio"><h1><i class="fa fa-coffee"></i> Laboratório</h1></a>
                 <div class="div-section">
                     <div>
                         <img src="./assets/arefeicao.png"/>
@@ -111,19 +112,19 @@
                 </div>
             </section>
             <section class="contato">
-                <a name="contato" id="contato"><h1><i class="fa fa-coffee"></i> Contatos</h1></a>
+                <a class="a_nav" name="contato" id="contato"><h1><i class="fa fa-coffee"></i> Contatos</h1></a>
                 <div class="div-section">
                     <div>
                         <i class="fa fa-mobile"></i>
                         <p>(98)984172734</p>
                     </div>
                     <div>
-                        <i class="fa fa-envelope-o"></i>
-                        <p>jackson.primo12@gmail.com</p>
-                    </div>
-                    <div>
                         <i class="fa fa-github"></i>
                         <p>github/jacksonPrimo</p>
+                    </div>
+                    <div>
+                        <i class="fa fa-envelope-o"></i>
+                        <p>jackson.primo12@gmail.com</p>
                     </div>
                     <div>
                         <i class="fa fa-linkedin"></i>
